--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -38,7 +38,9 @@
             "passwordTooShort": "Le mot de passe doit contenir au moins 8 caractères",
             "invalidEmail": "Adresse email invalide",
             "requiredField": "Ce champ est requis",
-            "usernameTooShort": "Le nom d'utilisateur doit contenir au moins 3 caractères"
+            "usernameTooShort": "Le nom d'utilisateur doit contenir au moins 3 caractères",
+            "usernameTooLong": "Le nom d'utilisateur doit contenir moins de 30 caractères",
+            "usernameContainsSpace": "Le nom d'utilisateur ne peut contenir d'espaces"
         }
     },
     "status": {
