feat: add markdown display support and update dependencies; enhance MyLibrary component with status icons and improve layout; update translations for chat and activity messages

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -162,6 +162,9 @@
         "youRatedIt": "You rated this book",
         "rateIt": "Track this book and rate it"
     },
+    "chat": {
+        "sources": "Used sources"
+    },
     "list": {
         "reorder": "Reorder",
         "edit": "Edit",
@@ -254,6 +257,8 @@
     "activity": {
         "title": "Activity",
         "empty": "No activity yet",
+        "loadingMore": "Loading more activities...",
+        "noMoreActivities": "No more activities to load",
         "me": {
             "addedToLibrary": "You have added <bold>{{title}}</bold> to your library",
             "removedFromLibrary": "You have removed <bold>{{title}}</bold> from your library",
