--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -1,4 +1,7 @@
 {
+    "common": {
+        "book": "book"
+    },
     "save": "Save",
     "create": "Create",
     "auth": {
@@ -63,7 +66,8 @@
         "lastRead": "Last read",
         "noLastRead": "Start reading to see your last reads",
         "mostTracked": "Most tracked",
-        "topRated": "Top rated"
+        "topRated": "Top rated",
+        "goToLibrary": "Go to library"
     },
     "discover": {
         "title": "Discover",
