--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -1,4 +1,7 @@
 {
+    "common": {
+        "book": "livre"
+    },
     "save": "Enregistrer",
     "create": "Créer",
     "auth": {
@@ -63,7 +66,8 @@
         "lastRead": "Dernières lectures",
         "noLastRead": "Commencez à lire pour voir vos dernières lectures",
         "mostTracked": "Les plus suivis",
-        "topRated": "Les mieux notés"
+        "topRated": "Les mieux notés",
+        "goToLibrary": "Aller à la bibliothèque"
     },
     "discover": {
         "title": "Découvrir",
