feat: book chat v1 early access + 0.0.9

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -181,7 +181,13 @@
         "inYourFavorites": "In your favorites"
     },
     "chat": {
-        "sources": "Used sources"
+        "sources": "Used sources",
+        "messagePlaceholder": "Ask a question",
+        "predefinedQuestions": {
+            "summarizeLastChapter": "Summarize the last chapter read",
+            "presentWork": "Introduce the work to me",
+            "analyzeCurrentArc": "Analyze the current arc"
+        }
     },
     "list": {
         "reorder": "Reorder",
